--- a/pages/preisliste.html
+++ b/pages/preisliste.html
@@ -25,7 +25,7 @@
 
             <span class="open-slide">
                 <span class="logo">
-                <img src="../img/HVE2.png" alt="Hochlandrinder logo"> 
+                <img id="HVElogo" src="../img/HVE2.png" alt="Hochlandrinder logo"> 
             </span>           
             <h1 id="title">Hochlandrinder von Ehesbach</h1>              
             </span>           
