--- a/pages/preisliste.html
+++ b/pages/preisliste.html
@@ -178,12 +178,11 @@
                         </h1>
                      </div>
 
+                     <p class="message">
+                        Alle Arten von Steaks bitte am Besten in Stückzahl vorbestellenigerne schon jetzt für die nächste Schlachtung damit wir besser planen - Alexander Millinger  0176162527917
+                    </p>
 
-
-
-
-
-</div>
+ </div>
 
 
        
