--- a/pages/about.html
+++ b/pages/about.html
@@ -8,8 +8,7 @@
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
     <link rel="stylesheet" href="../CSS/HVEstyle.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../js/sidebar.js"></script>
     
 </head>
