--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a href="#" class="btn-close" onclick="closeSideMenu()">&times;</a>
             <a href="index.html">Home</a>
             <a href="pages/preisliste.html">Preisliste</a>
-            <a href="pages/about.html">About</a>
-            <a href="mailto:von-ehesbach@web.de">Contact</a>
+            <a href="pages/about.html">&Uuml;ber uns</a>
+            <a href="mailto:von-ehesbach@web.de">Kontakt</a>
         </div>
 
        <!-- Slideshow container -->
