--- a/pages/preisliste.html
+++ b/pages/preisliste.html
@@ -179,7 +179,7 @@
  </div>
 
  <p class="message">
-    Alle Arten von Steaks bitte am Besten in Stückzahl vorbestellen, Verne schon jetzt für die nächste Schlachtung damit wir besser können planen - Alexander Millinger  0176162527917
+    Alle Arten von Steaks bitte am Besten in Stückzahl vorbestellen, Verne schon jetzt für die nächste Schlachtung damit wir besser können planen - Alexander Millinger  0176 162 527 917.
 </p>
 
        
