--- a/pages/about.html
+++ b/pages/about.html
@@ -47,8 +47,12 @@
             </div>
 
             <p class="about-content">
-                <span class="heading">Unserer Geschichte</span> <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, porro fuga! Exercitationem quibusdam, eum asperiores qui officia vitae necessitatibus incidunt quae? Aliquam tempora porro sequi, possimus quam delectus corrupti sit perspiciatis quidem perferendis veniam dolores itaque voluptates modi impedit et. Asperiores repudiandae sit incidunt eveniet tempore! Quo in nisi veniam laudantium cum tempora quaerat omnis eveniet? Cumque at fugiat veritatis eveniet distinctio reiciendis a odit alias, laborum ullam inventore sequi in blanditiis quos asperiores consequatur pariatur ipsam non, praesentium amet quisquam dolores! Pariatur doloribus eos cupiditate atque, magni laboriosam tempore nam perferendis, fuga officia modi impedit veritatis porro, cumque sit a id ipsa temporibus corrupti ut repellat dolorem placeat doloremque ipsum? Aspernatur inventore fugiat officia quibusdam, possimus nam ipsum iure soluta illum accusamus minima recusandae repudiandae culpa delectus, consequuntur in, rerum vero quis iste. Voluptatem voluptate quam hic, assumenda autem explicabo doloribus nostrum reprehenderit repellendus odio officia et totam eum at dolorum ratione modi saepe iure consequatur veritatis molestiae porro placeat. Eaque nesciunt asperiores debitis fugit deleniti deserunt, aliquam illo animi molestiae aut magni. Incidunt, accusamus minus magni modi dicta nobis repellendus nemo quaerat animi voluptatibus maxime tenetur quos aperiam, nihil dolorem ea asperiores sapiente excepturi dolores, omnis ipsum dignissimos?
+                <span class="heading">Unserer Betrieb</span> <br>
+                Wir züchten aus Leidenschaft seit 2016 Schottische Hochlandrinder für die Zucht und die Fleischproduktion.  <br>
+                
+                Alle unsere Tiere haben einen Namen, sind handzahm <br>
+                
+                Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
             </p>
 
 
