--- a/pages/about.html
+++ b/pages/about.html
@@ -48,9 +48,9 @@
 
             <p class="about-content">
                 <span class="heading">Unserer Betrieb</span> <br>
-                Wir züchten aus Leidenschaft seit 2016 Schottische Hochlandrinder für die Zucht und die Fleischproduktion.  <br>
+                Wir züchten aus Leidenschaft seit 2016 Schottische Hochlandrinder für die Zucht und die Fleischproduktion.  <br> <br>
                 
-                Alle unsere Tiere haben einen Namen, sind handzahm <br>
+                Alle unsere Tiere haben einen Namen, sind handzahm <br><br>
                 
                 Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
             </p>
