--- a/pages/about.html
+++ b/pages/about.html
@@ -50,7 +50,7 @@
                 <span class="heading">Unserer Betrieb</span> <br>
                 Wir züchten aus Leidenschaft seit 2016 Schottische Hochlandrinder für die Zucht und die Fleischproduktion.  <br> <br>
                 
-                Alle unsere Tiere haben einen Namen, sind handzahm und zutraulich.  Die geborenen Kälber leben in artgerechter Haltung ganzjährig in Mutterkuhhaltung im Freien und bleiben bis zum natürlichen Abschlagen (ca. 8-10 Monate) bei den Müttern.  Danach werden Sie entweder an andere Betriebe zur Zucht verkauft (meist weibliche Tiere) oder kommen für die <br><br>
+                Alle unsere Tiere haben einen Namen, sind handzahm und zutraulich.  Die geborenen Kälber leben in artgerechter Haltung ganzjährig in Mutterkuhhaltung im Freien und bleiben bis zum natürlichen Abschlagen (ca. 8-10 Monate) bei den Müttern.  Danach werden Sie entweder an andere Betriebe zur Zucht verkauft (meist weibliche Tiere) oder kommen für die nächsten drei bis vier Jahre auf die Bullenweide (männliche Tiere) zur Aufzucht.  Hier leben Sie in einem Herdenverbund mit Kumpels unterschiedlichen Alters. <br><br>
                 
                 Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
             </p>
