--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
                 <span class="heading">Unserer Vermarktung</span> <br>
                 Das Fleisch vermarkten wir selbst in Paketform a 10 kg.  Hat ein Bulle das Schlachtgewicht erreicht wird er eingeschätzt und die mögliche Anzahl der Pakete festgelegt.  Erst wenn alle Pakete reserviert sing (wir führen eine Warteliste), wird das Tier der Schlachtung zugeführt.  Vom Tier soll nichts übrig bleiben.  <br> <br>
                 
-                Wichtig ist uns der kurze und stressfreie Transport zur Schlachtung.  Bei uns bedeutet dies eine Fahrt von gerade einmal 10 Minuten im Anhänger, was die Tiere im jungen Alter gewöhnt werden.  Vor Ort sehen die Tiere keine Schlachthalle, sondern werden in Anhänger geschossen.  So wird Stress vermieden, was uns sehr wichtig ist.
+                Wichtig ist uns der kurze und stressfreie Transport zur Schlachtung.  Bei uns bedeutet dies eine Fahrt von gerade einmal 10 Minuten im Anhänger, was die Tiere im jungen Alter gewöhnt werden.  Vor Ort sehen die Tiere keine Schlachthalle, sondern werden in Anhänger geschossen.  So wird Stress vermieden, was uns sehr wichtig ist. <br> <br>
                 
                 Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
             </p>
