--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
             <footer class="footer-bar">
                 <p class="footer">
-                    Hochlandrinder von Ehesbach &copy; 2021
+                    Hochlandrinder von Ehesbach &copy; 2021 <br>
+                    Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
                 </p>
             </footer>
            
