--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </a>   
 
             <span class="open-slide">
-                <span class="logo">
-                <img id="HVElogo" src="img/HVE2.png" alt="Hochlandrinder logo"> 
-            </span>           
+                <!--<span class="logo">
+                    <img id="HVElogo" src="img/HVE2.png" alt="Hochlandrinder logo"> 
+                </span>-->      
             <h1 id="title">Hochlandrinder von Ehesbach</h1>              
             </span>           
              
