--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="German-owned Hochlandrinder Bauer">
-    <meta name="keywords" content="metzgerei, rindfleisch, german butcher, ribs, steaks,Agricultural Service">
+    <meta name="keywords" content="metzgerei, rindfleisch, german butcher, ribs, steaks,Agricultural Service,Ehesbach meats">
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
     <link rel="stylesheet" href="CSS/HVEstyle.css" type="text/css">
