--- a/pages/about.html
+++ b/pages/about.html
@@ -106,6 +106,14 @@
                 </center>
             </span>
         </div>
+
+        <a class="hamburger" href="#" onclick="openSideMenu()">
+            <svg width="50" height="50">
+                <path d="M0,5 30,5" stroke='#fff' stroke-width="5" />
+                <path d="M0,14 30,14" stroke='#fff' stroke-width="5" />
+                <path d="M0,23 30,23" stroke='#fff' stroke-width="5" />
+            </svg>
+        </a>
             <!-- Footer Bar-->
 
             <footer class="footer-bar">
