--- a/pages/preisliste.html
+++ b/pages/preisliste.html
@@ -183,7 +183,13 @@
     Alle Arten von Steaks bitte am Besten in Stückzahl vorbestellen, Verne schon jetzt für die nächste Schlachtung damit wir besser können planen - Alexander Millinger  0176 162 527 917.
     </p>
 --> 
-
+<a class="hamburger" href="#" onclick="openSideMenu()">
+    <svg width="50" height="50">
+        <path d="M0,5 30,5" stroke='#fff' stroke-width="5" />
+        <path d="M0,14 30,14" stroke='#fff' stroke-width="5" />
+        <path d="M0,23 30,23" stroke='#fff' stroke-width="5" />
+    </svg>
+</a>
        
             <!-- Footer Bar-->
 
