--- a/pages/about.html
+++ b/pages/about.html
@@ -118,13 +118,10 @@
 
         <footer class="footer-bar">
             <p class="footer">
-                <a href="https://www.facebook.com/EhesbachRanch"><img id="facebook-icon" src="../img/facebook-square-brands.svg"
-                        alt="facebook icon"></a> <br>
-                Hochlandrinder von Ehesbach &copy; 2021 <br>
-                Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
+                <a href="https://www.facebook.com/EhesbachRanch" id="HVElink">Hochlandrinder von Ehesbach &copy; 2021</a> <br>
+                Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799<br>
+                <a href="mailto:dcam1972@live.com" id="dcamlink">Website designed by D-Cam.</a>
             </p>
         </footer>
-           
-             
 </body>
 </html>
