--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="metzgerei, rindfleisch, german butcher, ribs, steaks,Agricultural Service,Ehesbach meats">
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
-    <link rel="stylesheet" href="CSS/HVEstyle.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/HVEstyle.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <script type="text/javascript" src="js/sidebar.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
@@ -43,14 +43,12 @@
       <img name="slide" class="slideshow" id="images">
             <!-- Footer Bar-->
 
-            <footer class="footer-bar">
-                <p class="footer">
-                  <a href="https://www.facebook.com/EhesbachRanch"><img id="facebook-icon" src="img/facebook-square-brands.svg" alt="facebook icon"></a>  <br>
-                    Hochlandrinder von Ehesbach &copy; 2021 <br>
-                    Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799
-                </p>
-            </footer>
-           
-                       
+        <footer class="footer-bar">
+            <p class="footer">
+                <a href="https://www.facebook.com/EhesbachRanch" id="HVElink">Hochlandrinder von Ehesbach &copy; 2021</a> <br>
+                Alexander Millinger Schulstraße 11, Lichtenstein Telefon: 0176/62527917 Steuernr. 78 085 03799<br>
+                <a href="mailto:dcam1972@live.com" id="dcamlink">Website designed by D-Cam.</a>
+            </p>
+        </footer>
 </body>
 </html>
