--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="metzgerei, rindfleisch, german butcher, ribs, steaks,Agricultural Service,Ehesbach meats">
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
-    <link rel="stylesheet" href="../CSS/HVEstyle.css" type="text/css">
+    <link rel="stylesheet" href="/CSS/HVEstyle.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <script type="text/javascript" src="js/sidebar.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
