--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
     <link rel="stylesheet" href="CSS/HVEstyle.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <script type="text/javascript" src="js/sidebar.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
 </head>
