--- a/pages/about.html
+++ b/pages/about.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../CSS/HVEstyle.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="/js/sidebar.js"></script>
-    <script type="text/javascript" src="/js/slideshow.js"></script>
+    <script type="text/javascript" src="../js/sidebar.js"></script>
+    <script type="text/javascript" src="../js/slideshow.js"></script>
     
     
 </head>
